--- a/src/app/products/products-item/products-item.component.html
+++ b/src/app/products/products-item/products-item.component.html
@@ -1,6 +1,6 @@
 <div class="row">
   <div class="col-md-3">
-    <img src="http://127.0.0.1:8000/storage/img/{{ product.id }}" alt="product image" class="img-fluid"
+    <img src="http://127.0.0.1:8000/uploads/{{ product.img }}" alt="product image" class="img-fluid"
          style="max-height: 150px; margin-right: 5px">
   </div>
   <div class="col-md-6">
@@ -9,7 +9,7 @@
     <p>{{ product.price }}</p>
   </div>
   <div class="col-md-3">
-    <button class="btn btn-success" [routerLink]="product.id">Edit</button>
+    <button class="btn btn-success" [routerLink]="product._id">Edit</button>
     <button class="btn btn-danger" (click)="onDelete()">Delete</button>
   </div>
 </div>
